<resources>
    <string name="app_name">Backpacking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start_track">Démarer le tracking GPS</string>
    <string name="stop_track">Arrêter le tracking GPS</string>
    <string name="force_upload">Forcer l\'envois des données</string>
    <string name="next_sheduled_upload">Prochain envoie planifier</string>
    <string name="track_activated">Tracking activé</string>
    <string name="track_disable">Tracking désactivé</string>
    <string name="permission_denied">Permision non accorder</string>
    <string name="location_service_channel">Tracker de positions</string>
    <string name="stop_tracking_notif">Arreter</string>
    <string name="pause_tracking_notif">Pause</string>
    <string name="resume_tracking_notif">Reprendre</string>
    <string name="tracking_status">Statut du tracking</string>
    <string name="tracking_stopped">Tracking arrêté</string>
    <string name="elapsed_time">Temps écoulé</string>
    <string name="pause_tracking">Mettre en pause</string>
    <string name="resume_tracking">Reprendre</string>
    <string name="stop_tracking">Arrêter</string>
    <string name="tracking_running">Tracking en cours…</string>
    <string name="tracking_paused">Tracking en pause…</string>
    <string name="send_data">Envoyer les données</string>
    <string name="no_data_to_send">Aucune données à envoyer</string>
    <string name="edit_api_preferance">Changer l\'URL de l\'API</string>
    <string name="api_preferances">Paramètres de l\'API</string>
    <string name="edit_login_pref">Editer votre nom d\'utilisateur</string>
    <string name="edit_api_password">Editer votre mots de passe</string>
    <string name="localization_settings">Parametres de localisations</string>
    <string name="edit_time_interval">Editer l\'interval de temps (min)</string>
    <string name="edit_min_distance">Editer la distance minimal (mètres)</string>
    <string name="menu_tracker">Tracker</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_upload">Upload</string>
    <string name="upload_file">Envoyer des images</string>
    <string name="app_icon">🎒</string>
    <string name="login_hint">Email</string>
    <string name="passwordHint">Mot de passe</string>
    <string name="connectButton">Se connecter</string>
    <string name="settings">Paramètres</string>
    <string name="login_failed">Échec de la connexion</string>
    <string name="login_error">Erreur lors de la connexion</string>
    <string name="fields_required">Tous les champs sont requis</string>
    <string name="app_logo">Logo de l\'application</string>
    <string name="back_button">Retour</string>
    <string name="menu_travels">Voyages\n</string>
    <string name="travel_img">Image de couverture du voyage</string>

    <string name="travel_edit_title">Éditer le voyage</string>
    <string name="travel_create_title">Créer un voyage</string>
    <string name="create_travel">Créer le voyage</string>
    <string name="cover_image">Image de couverture</string>
    <string name="select_cover_image">Sélectionner une image de couverture</string>
    <string name="choose_from_gallery">Choisir dans la Galerie</string>
    <string name="travel_name">Nom du voyage</string>
    <string name="travel_description">Description</string>
    <string name="travel_start_date">Date de début</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="error_name_required">Le nom du voyage est obligatoire</string>
    <string name="error_name_too_short">Le nom doit contenir au moins 3 caractères</string>
    <string name="error_name_too_long">Le nom doit contenir au maximum 255 caractères</string>
    <string name="error_description_too_short">La description doit contenir au moins 25 caractères</string>
    <string name="error_description_too_long">La description doit contenir au maximum 8048 caractères</string>
    <string name="error_start_date_required">La date de début est obligatoire</string>
    <string name="error_upload_in_progress">Veuillez attendre la fin de l\'upload</string>
    <string name="success_travel_created">Voyage créé avec succès</string>
    <string name="success_travel_updated">Voyage mis à jour avec succès</string>
    <string name="cover_picture_selected">L\'image est sélectionner</string>
    <string name="error_image_no_gps">L\'image doit contenir des coordonnées GPS</string>
    <string name="uploading_image">Upload de l\'image en cours…</string>
    <string name="processing_image">Traitement de l\'image…</string>
    <string name="fab_create_travel">Crée votre voyage</string>
    <string name="create_travel_title">Créer votre voyage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultTimer">00:00:00</string>

    <string name="upload_images_title">Télécharger des images</string>
    <string name="upload_ready">Prêt à télécharger des images</string>
    <string name="select_images">Sélectionner des images</string>
    <string name="cancel_upload">Annuler le téléchargement</string>
    <string name="retry_failed_uploads">Réessayer les téléchargements échoués</string>
    <string name="upload_info_message">Les images téléchargées seront associées au voyage actuel. Assurez-vous que les photos contiennent des coordonnées GPS.</string>
    <string name="upload_notification_channel_name">Téléchargements d\'images</string>
    <string name="upload_notification_channel_description">Affiche l\'état des téléchargements d\'images</string>
    <string name="uploading_images">Téléchargement d\'images</string>
    <string name="upload_completed">Téléchargement terminé</string>
    <string name="upload_success_message">%1$d images téléchargées avec succès</string>
    <string name="upload_failed">Échec du téléchargement</string>
    <string name="upload_failed_message">%1$d/%2$d images n\'ont pas pu être téléchargées</string>
    <string name="retry">Réessayer</string>
    <string name="upload_waiting_network">En attente de connexion réseau</string>
    <string name="upload_waiting_battery">En attente - batterie faible</string>
    <string name="permission_needed_title">Permission nécessaire</string>
    <string name="notification_permission_explanation">Cette fonctionnalité nécessite la permission de notification pour vous tenir informé de l\'avancement des téléchargements.</string>
    <string name="permission_denied_title">Permission refusée</string>
    <string name="notification_permission_settings_explanation">La permission de notification a été refusée définitivement. Veuillez l\'activer dans les paramètres de l\'application pour utiliser pleinement cette fonctionnalité.</string>
    <string name="error_starting_upload_no_travel">Aucun voyage sélectioner lors du démarage de l\'upload</string>
    <string name="uploading_in_progress">Téléchargement en cours...</string>
    <string name="upload_failed_count">Échec du téléchargement de %d image(s)</string>
    <string name="upload_cancelled_user">Upload annulé par l\'utilisateur</string>
    <string name="upload_failed_generic">Une erreur inconue c\'est produites lors de l\'upload</string>
    <string name="ready_to_upload">Prêt à télécharger</string>
    <string name="select_travel_for_retry">Selectioner un voyage pour upload\n</string>
    <string name="select_travel_first">Commencer par sélectioner un voyage</string>
    <string name="ok">Ok</string>
    <string name="storage_permission_explanation">L\'accès aux photos est nécessaire pour sélectionner et télécharger vos images avec toutes leurs métadonnées.</string>
    <string name="storage_permission_settings_explanation">Pour télécharger des images avec toutes leurs métadonnées, l\'application a besoin d\'accéder à vos photos. Veuillez activer cette permission dans les paramètres.</string>
    <string name="permission_needed_explanation_generic">Cette permission est nécessaire pour le bon fonctionnement de l\'application.</string>
    <plurals name="upload_failed_count_plural">
        <item quantity="one">Échec du téléchargement d\'une image</item>
        <item quantity="other">Échec du téléchargement de %d images</item>
    </plurals>
    <string name="no_pictures_found">Aucune photo trouvée</string>
    <string name="set_as_cover">Définir comme couverture</string>
    <string name="delete_picture">Supprimer</string>
    <string name="delete_confirmation_title">Confirmation</string>
    <string name="delete_confirmation">Voulez-vous vraiment supprimer cette image ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="operation_success">Opération réussie</string>
    <string name="set_cover_success">Image définie comme couverture</string>
    <string name="delete_success">Image supprimée</string>
    <string name="error_loading_pictures">Erreur lors du chargement des images</string>
    <string name="view_full_image">Voir l\'image en plein écran</string>
</resources>