<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/api_preferances">

        <EditTextPreference
            android:defaultValue="http://10.0.2.2:8080"
            android:key="api_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/edit_api_preferance" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/localization_settings">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="location_time_interval"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/edit_time_interval" />
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="location_min_distance"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/edit_min_distance" />
    </PreferenceCategory>
</PreferenceScreen>